# thea

./: .gitignore  CMakeLists.txt  current.txt  main.c  main.exe.stackdump  structure_of_save_data.txt  thea.h  theia.c  theia.h
analizer/: analizer.c  analizer.h
doc/: structure_of_save_data.txt
pkg/json-c/: CMakeLists.txt  json_util.h  linkhash.h
pkg/json-c/apps/: CMakeLists.txt
pkg/json-c/doc/: CMakeLists.txt
pkg/json-c/tests/: CMakeLists.txt
src/: constants.h  theia.c  theia.h
src/analizer/: analizer.c  analizer.h
src/engine_string/: analizer.c  analizer.h
src/equifinality/: iofile.c  iofile.h
src/errors/: panic.c  panic.h
src/utility/: utility.h
test/: sintact_analizer_test.c  test.c
utility/: utility.c  utility.h
