cmake_minimum_required(VERSION 3.1)
SET (CMAKE_C_COMPILER_WORKS 1)
SET (CMAKE_CXX_COMPILER_WORKS 1)
project(Theia)
set(SOURCES_FILES src/theia.c src/analizer/analizer.h src/analizer/analizer.c src/utility/utility.h src/utility/utility.c test/sintact_analizer_test.c)
add_executable(Theia ${SOURCES_FILES})
